--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@ai-sdk/anthropic": "^2.0.6",
     "@ai-sdk/openai": "^2.0.19",
+    "@ai-sdk/react": "^2.0.23",
     "@prisma/client": "^6.2.1",
     "@remix-run/dev": "^2.16.1",
     "@remix-run/fs-routes": "^2.16.1",
