--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^2.0.6",
-    "@ai-sdk/openai": "^2.0.19",
+    "@ai-sdk/openai": "^2.0.32",
     "@ai-sdk/react": "^2.0.23",
     "@prisma/client": "^6.2.1",
     "@remix-run/dev": "^2.16.1",
@@ -41,13 +41,14 @@
     "@shopify/shopify-app-remix": "^3.7.0",
     "@shopify/shopify-app-session-storage-prisma": "^6.0.0",
     "@supabase/supabase-js": "^2.56.0",
-    "ai": "^5.0.22",
+    "ai": "^5.0.47",
     "date-fns": "^4.1.0",
     "isbot": "^5.1.0",
     "nanoid": "^5.1.5",
     "prisma": "^6.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remix-utils": "^8.8.0",
     "vite-tsconfig-paths": "^5.0.1",
     "zod": "^4.1.1"
   },
