--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -2,7 +2,7 @@
 
 client_id = "cfdd3e76c657fa7e6f0c98f424fb8955"
 name = "FluxChat AI Assistant"
-application_url = "https://077f804d5415.ngrok-free.app"
+application_url = "https://19aea119cfa6.ngrok-free.app"
 embedded = true
 handle = "flux-chat"
 
@@ -25,7 +25,12 @@ api_version = "2025-07"
 scopes = "read_products,write_products,read_orders,write_orders,read_customers"
 
 [auth]
-redirect_urls = ["https://077f804d5415.ngrok-free.app/auth/callback", "https://077f804d5415.ngrok-free.app/auth/shopify/callback", "https://077f804d5415.ngrok-free.app/api/auth/callback"]
+redirect_urls = ["https://19aea119cfa6.ngrok-free.app/auth/callback", "https://19aea119cfa6.ngrok-free.app/auth/shopify/callback", "https://19aea119cfa6.ngrok-free.app/api/auth/callback"]
 
 [pos]
 embedded = false
+
+[app_proxy]
+url = "https://19aea119cfa6.ngrok-free.app/api/proxy"
+subpath = "flux-chat"
+prefix = "apps"
