--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -2,7 +2,7 @@
 
 client_id = "cfdd3e76c657fa7e6f0c98f424fb8955"
 name = "FluxChat AI Assistant"
-application_url = "https://244127b9bbf5.ngrok-free.app"
+application_url = "https://0fa1c7eac933.ngrok-free.app:3458"
 embedded = true
 handle = "flux-chat"
 
@@ -25,12 +25,12 @@ api_version = "2025-07"
 scopes = "read_products,write_products,read_orders,write_orders,read_customers"
 
 [auth]
-redirect_urls = ["https://244127b9bbf5.ngrok-free.app/auth/callback", "https://244127b9bbf5.ngrok-free.app/auth/shopify/callback", "https://244127b9bbf5.ngrok-free.app/api/auth/callback"]
+redirect_urls = ["https://0fa1c7eac933.ngrok-free.app:3458/auth/callback", "https://0fa1c7eac933.ngrok-free.app:3458/auth/shopify/callback", "https://0fa1c7eac933.ngrok-free.app:3458/api/auth/callback"]
 
 [pos]
 embedded = false
 
 [app_proxy]
-url = "https://244127b9bbf5.ngrok-free.app"
+url = "https://0fa1c7eac933.ngrok-free.app:3458"
 subpath = "flux-chat"
 prefix = "apps"
