using session management via redis store. Fixed the issue with feedback loop after prodcut syncing

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@shopify/polaris": "^12.0.0",
     "@shopify/shopify-app-remix": "^3.7.0",
     "@shopify/shopify-app-session-storage-prisma": "^6.0.0",
+    "@shopify/shopify-app-session-storage-redis": "^5.0.0",
     "@supabase/supabase-js": "^2.56.0",
     "ai": "^5.0.47",
     "date-fns": "^4.1.0",
@@ -49,6 +50,7 @@
     "prisma": "^6.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "redis": "^5.8.2",
     "remix-utils": "^8.8.0",
     "vite-tsconfig-paths": "^5.0.1",
     "zod": "^4.1.1"
